--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -3,15 +3,17 @@
 {% block content %}
 <ul class="list-articles">
 	{% for p in posts %}
-	{% if p.is_published %}
-			<li><h2>{{p.title}}</h2>
+			<li><div class="article-panel">
+	<p class="first">Категория: {{p.cat.name}}</p>
+	<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
+    </div>
+				<h2>{{p.title}}</h2>
     {% autoescape off %}
 	{{p.content|linebreaks|truncatewords:40}}
     {% endautoescape %}
 			<div class="clear"></div>
-			<p class="link-read-post"><a href="{% url 'post' p.id %}">Читать пост</a></p>
+			<p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать пост</a></p>
 			</li>
-	{% endif %}
 	{% endfor %}
 </ul>
 {% endblock %}
