добавлена форма добавления статей

--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -52,7 +52,7 @@
 </td>
 <!-- Конец Sidebar'а -->
 <td valign="top" class="content">
-	<!-- Хлебные крошки -->
+	<!-- Блок для вставки фильтра -->
 	{% block breadcrumbs %}
 	{% endblock %}
 
