добавлена форма загрузки файлов на сервер

--- a/sitewomen/purch_manager/templates/purch_manager/run_deficit.html
+++ b/sitewomen/purch_manager/templates/purch_manager/run_deficit.html
@@ -12,6 +12,7 @@
             <td class="one">{{cont.Номенклатура}}</td>
             <td class="one">{{cont.Код}}</td>
             <td class="col-vo">{{cont.ЕИ}}</td>
+            <td class="col-vo">{{cont.Дефицит}}</td>
         </tr>
         {% endfor %}
     </table>
