--- a/sitewomen/women/templates/women/about.html
+++ b/sitewomen/women/templates/women/about.html
@@ -3,6 +3,10 @@
 {% block content %}
 <h1>{{title}}</h1>
 <!--Для загрузки файла на сервер-->
-<p>О сайте</p>
-
+<form action="" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+<!--    <p><input type="file" name="file_upload"></p>-->
+    <p><button type="submit">Отправить</button></p>
+</form>
 {% endblock %}
