--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,16 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<ul class="list-articles">
+<ul class="list-articles" xmlns="http://www.w3.org/1999/html">
 	{% for p in posts %}
 			<li><div class="article-panel">
 	<p class="first">Категория: {{p.cat.name}}</p>
 	<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
     </div>
+
+
 				<h2>{{p.title}}</h2>
-    {% autoescape off %}
-	{{p.content|linebreaks|truncatewords:40}}
-    {% endautoescape %}
+					{% autoescape off %}
+					{{p.content|linebreaks|truncatewords:40}}
+					{% endautoescape %}
+<!--				Отображение файла-->
+				{% if p.photo %}
+				<p><file src="{{p.photo.url}}"><a href="{{p.photo.url}}">Файл дефицита </a></file></p>
+				{% endif %}
+
 			<div class="clear"></div>
 			<p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать пост</a></p>
 			</li>
