--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -17,12 +17,21 @@
 {% block mainmenu %}
 		<div class="header">
 			<ul id="mainmenu" class="mainmenu">
-			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
-
-{% for m in menu %}
-	{% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
-		<a href="{% url m.url_name %}">{{m.title}}</a></li>
-{% endfor %}
+				<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
+					<!--Применили тэг из файла women_tags.py для отображения меню-->
+					{% get_menu as menu %}
+					<!--Перебираем меню, и присваиваем url страницы-->
+					{% for m in menu %}
+						<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+					{% endfor %}
+					<!--Проверка авторизации пользователя-->
+					{% if user.is_authenticated %}
+						<!--Если авторизован, то выводится имя пользователя и кнопка выйти-->
+						<li class="last">{{user.username}} | <a href="{% url 'users:logout' %}">Выйти</a></li>
+					{% else %}
+						<!--Иначе выводится кнопки Войти, Регистрация-->
+						<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="#">Регистрация</a></li>
+					{% endif %}
 			</ul>
 			<div class="clear"></div>
 		</div>
