--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -30,7 +30,7 @@
 						<li class="last">{{user.username}} | <a href="{% url 'users:logout' %}">Выйти</a></li>
 					{% else %}
 						<!--Иначе выводится кнопки Войти, Регистрация-->
-						<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="#">Регистрация</a></li>
+						<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="{% url 'users:register' %}">Регистрация</a></li>
 					{% endif %}
 			</ul>
 			<div class="clear"></div>
