--- a/sitewomen/women/templates/women/list_tags.html
+++ b/sitewomen/women/templates/women/list_tags.html
@@ -1,5 +1,5 @@
 {% if tags %}
-<p>Теги:</p>
+<p>Сотрудники:</p>
 <ul class="tags-list">
     {% for t in tags %}
     <li><a href="{{t.get_absolute_url}}">{{t.tag}}</a></li>
